; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_ra_gl.c_gl_timer_stop.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_ra_gl.c_gl_timer_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra = type { %struct.ra_gl* }
%struct.ra_gl = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (i32)* }
%struct.gl_timer = type { i32, i32 }

@GL_TIME_ELAPSED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ra*, %struct.gl_timer*)* @gl_timer_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gl_timer_stop(%struct.ra* %0, %struct.gl_timer* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ra*, align 8
  %5 = alloca %struct.gl_timer*, align 8
  %6 = alloca %struct.ra_gl*, align 8
  %7 = alloca %struct.TYPE_2__*, align 8
  %8 = alloca %struct.gl_timer*, align 8
  store %struct.ra* %0, %struct.ra** %4, align 8
  store %struct.gl_timer* %1, %struct.gl_timer** %5, align 8
  %9 = load %struct.ra*, %struct.ra** %4, align 8
  %10 = getelementptr inbounds %struct.ra, %struct.ra* %9, i32 0, i32 0
  %11 = load %struct.ra_gl*, %struct.ra_gl** %10, align 8
  store %struct.ra_gl* %11, %struct.ra_gl** %6, align 8
  %12 = load %struct.ra_gl*, %struct.ra_gl** %6, align 8
  %13 = getelementptr inbounds %struct.ra_gl, %struct.ra_gl* %12, i32 0, i32 1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  store %struct.TYPE_2__* %14, %struct.TYPE_2__** %7, align 8
  %15 = load %struct.gl_timer*, %struct.gl_timer** %5, align 8
  store %struct.gl_timer* %15, %struct.gl_timer** %8, align 8
  %16 = load %struct.gl_timer*, %struct.gl_timer** %8, align 8
  %17 = getelementptr inbounds %struct.gl_timer, %struct.gl_timer* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %34

21:                                               ; preds = %2
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32 (i32)*, i32 (i32)** %23, align 8
  %25 = load i32, i32* @GL_TIME_ELAPSED, align 4
  %26 = call i32 %24(i32 %25)
  %27 = load %struct.gl_timer*, %struct.gl_timer** %8, align 8
  %28 = getelementptr inbounds %struct.gl_timer, %struct.gl_timer* %27, i32 0, i32 0
  store i32 0, i32* %28, align 4
  %29 = load %struct.ra_gl*, %struct.ra_gl** %6, align 8
  %30 = getelementptr inbounds %struct.ra_gl, %struct.ra_gl* %29, i32 0, i32 0
  store i32 0, i32* %30, align 8
  %31 = load %struct.gl_timer*, %struct.gl_timer** %8, align 8
  %32 = getelementptr inbounds %struct.gl_timer, %struct.gl_timer* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %21, %20
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
